[gd_scene load_steps=2 format=3 uid="uid://bdcxusbd86oox"]

[ext_resource type="Script" uid="uid://dwl36vn5chqmq" path="res://Scripts/GL_Node_Point.gd" id="1_fygh4"]

[node name="Node Row" type="HBoxContainer"]

[node name="Input" type="Button" parent="." groups=["Outputs"]]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "◉"
script = ExtResource("1_fygh4")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Testtesttesttesttest"
clip_text = true

[node name="Output" type="Button" parent="." groups=["Outputs"]]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "◉"
script = ExtResource("1_fygh4")

[connection signal="mouse_entered" from="Input" to="Input" method="mouse_enter"]
[connection signal="mouse_exited" from="Input" to="Input" method="mouse_exit"]
[connection signal="button_down" from="Output" to="Output" method="_start_drag"]
